feat(core): align plugin runtime with capability-gated NMS
Boot, commands, license HTTP, placeholders, and plugin.yml follow the
1.17+ floor while remaining safe to class-load beside future legacy
bridges.