@@ -1,5 +1,7 @@
 package com.monkey.ultimatebot.addon.runtime;
 
+import java.util.stream.Collectors;
+
 import com.monkey.ultimatebot.api.addon.AddonRegistry;
 import com.monkey.ultimatebot.api.addon.AddonSnapshot;
 import java.util.List;
@@ -16,12 +18,12 @@ public final class CoreAddonRegistry implements AddonRegistry {
         return addons.values().stream()
                 .sorted((left, right) ->
                         left.descriptor().id().compareTo(right.descriptor().id()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public Optional<AddonSnapshot> addon(String id) {
-        if (id == null || id.isBlank()) {
+        if (id == null || id.trim().isEmpty()) {
             return Optional.empty();
         }
         return Optional.ofNullable(addons.get(id.trim().toLowerCase(Locale.ROOT)));
