@@ -22,37 +22,38 @@ public class ReloadCommand {
     public void reload(
             BukkitCommandActor actor,
             @Optional @Suggest({"config", "bot", "maps", "all"}) String option) {
-        if (option == null || option.isBlank()) {
+        if (option == null || option.trim().isEmpty()) {
             actor.sender()
                     .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-usage")));
             return;
         }
 
-        switch (option.toLowerCase(Locale.ROOT)) {
-            case "config" -> {
+                switch (option.toLowerCase(Locale.ROOT)) {
+            case "config":
                 reloadConfig();
-                actor.sender()
-                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-config")));
-            }
-            case "bot" -> {
+                                actor.sender()
+                                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-config")));
+                break;
+            case "bot":
                 reloadBot();
-                actor.sender()
-                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-bot")));
-            }
-            case "maps" -> {
+                                actor.sender()
+                                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-bot")));
+                break;
+            case "maps":
                 reloadMaps();
-                actor.sender()
-                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-maps")));
-            }
-            case "all" -> {
+                                actor.sender()
+                                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-maps")));
+                break;
+            case "all":
                 reloadAll();
-                actor.sender()
-                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-all")));
-            }
-            default ->
+                                actor.sender()
+                                        .sendMessage(ChatColorUtils.translate(plugin.getLangString("messages.reload-all")));
+                break;
+            default:
                 actor.sender()
                         .sendMessage(
                                 ChatColorUtils.translate(plugin.getLangString("messages.reload-invalid-option")));
+                break;
         }
     }
 
