@@ -1,6 +1,7 @@
 package com.monkey.ultimatebot.utils.armor;
 
 import com.monkey.ultimatebot.utils.equipment.BotEquipmentUtils;
+import com.monkey.ultimatebot.utils.material.MaterialCatalog;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
@@ -12,19 +13,19 @@ import org.bukkit.plugin.Plugin;
 
 public class ArmorCycle {
 
-    private static final List<ArmorTier> ORDERED_TIERS = List.of(ArmorTier.values());
+    private static final List<ArmorTier> ORDERED_TIERS = java.util.Collections.unmodifiableList(java.util.Arrays.asList(ArmorTier.values()));
 
     public static Material getNextArmor(Material current, EquipmentSlot slot) {
-        return getNextArmor(current, slot, ArmorTier.LEATHER, ArmorTier.NETHERITE);
+        return getNextArmor(current, slot, ArmorTier.LEATHER, ArmorTier.maxAvailable());
     }
 
     public static Material getNextArmor(Material current, EquipmentSlot slot, ArmorTier minTier, ArmorTier maxTier) {
         ArmorTier resolvedMin = minTier == null ? ArmorTier.LEATHER : minTier;
-        ArmorTier resolvedMax = maxTier == null ? ArmorTier.NETHERITE : maxTier;
+        ArmorTier resolvedMax = maxTier == null ? ArmorTier.maxAvailable() : maxTier;
 
         if (resolvedMin.compareTo(resolvedMax) > 0) {
             resolvedMin = ArmorTier.LEATHER;
-            resolvedMax = ArmorTier.NETHERITE;
+            resolvedMax = ArmorTier.maxAvailable();
         }
 
         ArmorTier currentTier = ArmorTier.fromMaterial(current, slot);
@@ -42,11 +43,11 @@ public class ArmorCycle {
 
     public static Material clampArmor(Material current, EquipmentSlot slot, ArmorTier minTier, ArmorTier maxTier) {
         ArmorTier resolvedMin = minTier == null ? ArmorTier.LEATHER : minTier;
-        ArmorTier resolvedMax = maxTier == null ? ArmorTier.NETHERITE : maxTier;
+        ArmorTier resolvedMax = maxTier == null ? ArmorTier.maxAvailable() : maxTier;
 
         if (resolvedMin.compareTo(resolvedMax) > 0) {
             resolvedMin = ArmorTier.LEATHER;
-            resolvedMax = ArmorTier.NETHERITE;
+            resolvedMax = ArmorTier.maxAvailable();
         }
 
         ArmorTier currentTier = ArmorTier.fromMaterial(current, slot);
@@ -88,20 +89,54 @@ public class ArmorCycle {
 
     public static Material getMaterialFromConfig(FileConfiguration config, String key, Plugin plugin) {
         String matName = config.getString("gui.default-armor." + key, "NETHERITE");
-        String suffix =
-                switch (key) {
-                    case "helmet" -> "_HELMET";
-                    case "chestplate" -> "_CHESTPLATE";
-                    case "leggings" -> "_LEGGINGS";
-                    case "boots" -> "_BOOTS";
-                    default -> "";
-                };
+        String suffix;
+                                switch (key) {
+                    case "helmet":
+                        suffix = "_HELMET";
+                        break;
+                    case "chestplate":
+                        suffix = "_CHESTPLATE";
+                        break;
+                    case "leggings":
+                        suffix = "_LEGGINGS";
+                        break;
+                    case "boots":
+                        suffix = "_BOOTS";
+                        break;
+                    default:
+                        suffix = "";
+                        break;
+                }
 
-        try {
-            return Material.valueOf(matName + suffix);
-        } catch (IllegalArgumentException e) {
-            plugin.getLogger().warning("Materiale armatura non valido (" + matName + suffix + "): " + e);
-            return Material.AIR;
+        String fullName = matName + suffix;
+        Material material = MaterialCatalog.optional(fullName, Material.AIR);
+        if (material == Material.AIR) {
+            plugin.getLogger().warning("Materiale armatura non valido (" + fullName + ")");
         }
+        // Clamp netherite config to diamond when platform max is diamond.
+        EquipmentSlot slot;
+        switch (key) {
+            case "helmet":
+                slot = EquipmentSlot.HEAD;
+                break;
+            case "chestplate":
+                slot = EquipmentSlot.CHEST;
+                break;
+            case "leggings":
+                slot = EquipmentSlot.LEGS;
+                break;
+            case "boots":
+                slot = EquipmentSlot.FEET;
+                break;
+            default:
+                slot = null;
+                break;
+        }
+        ArmorTier tier = ArmorTier.fromMaterial(material, slot);
+        if (tier != null && tier.compareTo(ArmorTier.maxAvailable()) > 0) {
+            EquipmentSlot clampSlot = slot != null ? slot : EquipmentSlot.HEAD;
+            return ArmorTier.maxAvailable().toMaterial(clampSlot);
+        }
+        return material;
     }
 }
